--- a/package.json
+++ b/package.json
@@ -4,12 +4,14 @@
     "description": "Full stack vue and node",
     "main": "guestbook.js",
     "dependencies": {
+        "axios": "^0.21.1",
         "body-parser": "^1.19.0",
         "cors": "^2.8.5",
         "express": "^4.17.1",
         "i": "^0.3.6",
         "mongodb": "^3.6.9",
-        "nodemon": "^2.0.7"
+        "nodemon": "^2.0.7",
+        "path": "^0.12.7"
     },
     "devDependencies": {},
     "scripts": {
